--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "vendor/zsh-syntax-highlighting"]
 path = vendor/zsh-syntax-highlighting
 url = git@github.com:zsh-users/zsh-syntax-highlighting.git
+
+[submodule "vendor/my-gruvbox-vim-theme"]
+path = vendor/my-gruvbox-vim-theme
+url = https://github.com/kmansou/gruvbox
